styles.css
@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap');

:root {
    --color-secundario: rgba(220, 61, 61, 0.711);
}

body,
h1,
h2,
h3,
p,
ul {
    font-family: 'Rubik';
    margin: 0;
    padding: 0;
}

html,
body {
    height: 100%;
    background: rgba(255, 255, 255, 0.5);
}

.container {
    display: flex;
    height: 100%;
    margin-left: 250px;
}

.topbar {
    background-color: #f0f0f0;
    display: flex;
    justify-content: center;
    align-items: center;
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
    position: fixed;
    width: 100%;
    height: 4.5rem;
    z-index: 1000;
}

.title {
    color: var(--color-secundario);
    font-size: 2.2rem;
    position: relative;
}

.title::before,
.title::after {
    content: '';
    position: absolute;
    bottom: -5px;
    left: 50%;
    transform: translateX(-50%);
    width: 50px;
    height: 2px;
    background-color: var(--color-secundario);
    transform: translateX(-50%) scaleX(0);
    transition: transform 0.3s ease-in-out;
}

.title.active::before,
.title.active::after {
    transform: translateX(-50%) scaleX(1);
}

.buttons-user {
    display: flex;
    flex-direction: column;
    align-self: center;
    gap: 1rem;
}

.btn-full {
    color: #333;
    padding: 1.2rem 1.8rem;
    border-radius: 10px;
    font-weight: 600;
    background-color: #fff;
    text-align: center;
    border: none;
    outline: none;
    cursor: pointer;
    text-decoration: none;
}

.btn-full:hover {
    color: var(--color-secundario);
    transform: scale(1.04);
}

.content-container {
    display: flex;
    flex: 1;
}

.sidebar {
    background-color: #333;
    width: 250px;
    display: flex;
    flex-direction: column;
    position: fixed;
    height: 100%;
    justify-content: center;
}

.container-socials {
    display: flex;
    gap: 8px;
    position: absolute;
    bottom: 50%;
    transform: translateY(50%);
    padding: 10px 30px;
    right: 0;
}

.container-socials i {
    color: #333;
    font-size: 3.5rem;
}

.container-socials i:hover {
    color: var(--color-secundario);
    transform: scale(1.04);
}

.main-content {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
}

.card-container {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
    justify-content: center;
}

.card {
    background-color: #f0f0f0;
    border-radius: 10px;
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
    padding: 20px;
    width: 80%;
    max-width: 600px;
    display: flex;
    gap: 10px;
    text-decoration: none;
    color: #333;
}

.card i {
    color: #888888;
}

.card:hover {
    color: var(--color-secundario);
    transform: scale(1.04);

}

.card:hover i {
    color: rgb(255, 255, 102);
    transform: scale(1.04);
    transition: color 0.3s ease;
}

.footer {
    background-color: #f0f0f0;
    text-align: center;
    padding: 10px 0;
    color: #555;
    position: fixed;
    bottom: 0;
    width: 100%;
    font-weight: 700;
}

.footer-content p {
    margin-bottom: 10px;
}

@media (max-width: 1099px) {
    .topbar {
        padding: 10px;
        justify-content: start;
    }

    .title {
        font-size: 1.8rem;
    }

    .container {
        margin: 0;
    }

    .sidebar {
        width: 100%;
        height: 10%;
        display: flex;
        margin-top: 92px;
    }

    .buttons-user {
        flex-direction: row;
    }

    .container-socials {
        gap: 1rem;
    }
}

@media (max-width: 620px) {
    .btn-full {
        font-size: 0.6rem;
    }

    .container-socials i {
        font-size: 3rem;
    }
}

